improvements by chandan sir at 2june2021

--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
       <title>Sofocle Labs</title>
    </head>
    <body style="padding:0px; margin:0px; background:#000000;font-family:Arial;">
-      <table width="1000" align="center" border="0"  cellpadding="15" style="background:url(connection.png) no-repeat #ffffff; background-position:right bottom;">
+      <table width="1100" align="center" border="0"  cellpadding="15" style="background:url(connection.png) no-repeat #ffffff; background-position:right bottom;">
          <tr>
             <td width="33.33%" valign="middle"><img src="amity.png" width="60"></td>
-            <td width="33.33%" align="center" valign="middle"><img src="sofocle-lab.png"></td>
+            <td width="33.33%" align="center" valign="middle"><img src="sofocle-lab.png" width="180"></td>
             <td width="33.33%" align="right" valign="middle"><img src="cecma.png" width="40"></td>
          </tr>
          <tr>
             <td colspan="3">
                <table width="320" align="center">
                   <tr>
-                     <td width="50%" valign="middle" ><img src="Group.png" width="50"></td>
-                     <td width="50%"  valign="middle" align="center"><span style="font-size:38px; font-weight:bold;">CERTIFICATE</span><br/><span style="font-size:20px;">OF COMPLETION</span></td>
+                     <td width="50%" valign="middle" ><img src="Group.png" width="80"></td>
+                     <td width="50%"  valign="middle" align="center"><span style="font-size:55px; font-weight:bold;">CERTIFICATE</span><br/><span style="font-size:28px;margin-top:10px;display:inline-block;">OF COMPLETION</span></td>
                   </tr>
                </table>
             </td>
          </tr>
          <tr>
             <td  valign="middle" align="center" colspan="3">
-			<span style="color:#2692D9; font-size:35px;text-align:center; ">Your Name</span>
+			<span style="color:#2692D9; font-size:40px;text-align:center; ">Your Name</span>
                
             </td>
          </tr>
@@ -45,7 +45,7 @@
                <table width="800" align="center">
                   <tr>
                      <td align="center">
-                        <span style="color:#6A667C;font-size:22px; line-height:30px;">Successfully completed Four weeks Course “Blockchain For Developers” from 18th May to 18th June 2021</span>
+                        <span style="color:#6A667C;font-size:24px; line-height:30px;">Successfully completed Four weeks Course “Blockchain For Developers” from 18th May to 18th June 2021</span>
                      </td>
                   </tr>
                </table>
@@ -63,9 +63,9 @@
             <td colspan="3">
                <table width="750" align="center">
                   <tr>
-                     <td width="33.33%"><img src="sign-saurabh.png" ><br/><span style="color:#696969; border-top:#C4C4C4 solid 2px; padding-top:15px; margin:5px 15px 0; display:block; ">Programme Officer CEMCA</span></td>
-                     <td width="33.33%"><img src="ajay-rana-signature.png"><br/><span style="color:#696969; border-top:#C4C4C4 solid 2px; padding-top:15px;margin:5px 15px 0; display:block;">DIRECTOR Amity University</span></td>
-                     <td width="33.33%"><img src="jeeven_sig.png"><br/><span style="color:#696969; border-top:#C4C4C4 solid 2px; padding-top:15px;margin:5px 15px 0; display:block;">CEO SofocleLabs</span></td>
+                     <td width="33.33%" align="center"><img src="sign-saurabh.png" ><br/><span style="color:#696969; border-top:#C4C4C4 solid 2px; padding-top:15px; margin:5px 15px 0; display:block;text-align:left;">Programme Officer CEMCA</span></td>
+                     <td width="33.33%" align="center"><img src="ajay-rana-signature.png"><br/><span style="color:#696969; border-top:#C4C4C4 solid 2px; padding-top:15px;margin:5px 15px 0; display:block;text-align:left;">DIRECTOR Amity University</span></td>
+                     <td width="33.33%" align="center"><img src="jeeven_sig.png"><br/><span style="color:#696969; border-top:#C4C4C4 solid 2px; padding-top:15px;margin:5px 15px 0; display:block;text-align:left;">CEO SofocleLabs</span></td>
                   </tr>
                </table>
             </td>
@@ -75,13 +75,14 @@
                <table width="100%" align="center">
                   <tr>
                      <td width="5%" valign="top">
-                        <img src="qr-code.png" style="margin-top:-50px;">
+                        <img src="qr-code.png" style="margin-top:-65px;">
+						<p style="font-size:8px; ">#OJU4523JHB4876NMK234JU00AE10778NM</p>
                      </td>
                      <td  valign="bottom"   width="95%" >
                         <div style="text-align:center; margin-left:-95px;">
-                           <span style="font-size:22px;">
-                           Blockchain Lab Powered by Zeeve</span><br/>
-                           <span style="color:#6A667C; font-size:13px; margin-top:10px;">This certificate can be verified at <a href="www.certyza.com">www.certyza.com </a>or scan the QR code to check the authenticity</span>
+                           <span style="font-size:28px;">
+                           Blockchain Lab Powered by Zeeve <img src="icon.png"></span><br/>
+                           <span style="color:#6A667C; font-size:15px; margin-top:10px;display:inline-block;">This certificate can be verified at <a href="www.certyza.com" style="color:#6A667C;">www.certyza.com </a>or scan the QR code to check the authenticity</span>
                         </div>
                      </td>
                   </tr>
